<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.lightweight.ui.workouttracking.home.HomeFragment"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_selectCategoryFragment"
            app:destination="@id/selectCategoryFragment" />
        <action
            android:id="@+id/action_homeFragment_to_calendarFragment"
            app:destination="@id/calendarFragment" />
        <argument
            android:name="selectedDate"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="today" />
        <action
...
