...
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/image_view_share_workout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/image_view_select_date"
                    style="@style/Widget.AppCompat.ActionButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/string_select_date"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
...
